--- a/W1D2/index.html
+++ b/W1D2/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <h1 class="red" id="red">Make me red!</h1>
+    <h1 class="blue" id="blue">Make me blue!</h1>
 </body>
 </html>
