--- a/W1D2/ButtonUp.html
+++ b/W1D2/ButtonUp.html
@@ -11,7 +11,7 @@
     <div id="btn-group">
         <button id="search">Search</button>
         <button id="plus">+</button>
-        <button id="create">Create Account</button>
+        <button id="createaccount">Create Account</button>
     </div>
 </body>
 </html>
