--- a/W1D3/GitHubBlocks.html
+++ b/W1D3/GitHubBlocks.html
@@ -7,19 +7,24 @@
     <link rel="stylesheet" href="GitHubBlocks.css">
     <title>GitHubBlocks</title>
 </head>
+
+</style>    
 <body>
     <div class="catblocks">
+        <h1>GitHub Blocks</h1>
         <div class="catblock-1">
-            <p><img src="daftpunktocat-guy.gif"></p>
+            <img src="IMG/daftpunktocat-guy.gif" class="octocat" alt="daftpunktocat">
+            <img src="IMG/catstello.png" class="octocat" alt="catstello">
+            <img src="IMG/daftpunktocat-thomas.gif" class="octocat" alt="daftpunktocat">
         </div>
-        <div class="catblock-2">
-            <p>I just want to be successful, but people always want to bring me down but thats okay
-            because i don't need them. I just need me, myself, and I</p>
-        </div>
-        <div class="catblock-3">
-            <p>I just want to be successful, but people always want to bring me down but thats okay
-            because i don't need them. I just need me, myself, and I</p>
-        </div>
+        <div class="catblock-2"></div>
+            <img src="IMG/NUX_Octodex.gif" class="octocat" alt="nux">
+            <img src="IMG/Fintechtocat.png" class="octocat" alt="Fintechtocat">
+            <img src="IMG/NUX_Octodex.gif" class="octocat" alt="nux">
+        <div class="catblock-3"></div>
+            <img src="IMG/daftpunktocat-thomas.gif" class="octocat" alt="daftpunktocat-thomas">
+            <img src="IMG/trekkie.png" class="octocat" alt="trekkie">
+            <img src="IMG/daftpunktocat-guy.gif" class="octocat" alt="daftpunktocat">
     </div>
 </body>
 </html>
