--- a/W1D3/GitHubBlocks.html
+++ b/W1D3/GitHubBlocks.html
@@ -10,21 +10,25 @@
 
 </style>    
 <body>
-    <div class="catblocks">
+    <div class="container">
         <h1>GitHub Blocks</h1>
-        <div class="catblock-1">
+        <div class="dancecat1">
             <img src="IMG/daftpunktocat-guy.gif" class="octocat" alt="daftpunktocat">
-            <img src="IMG/catstello.png" class="octocat" alt="catstello">
+            <img src="IMG/trekkie.png" class="octocat" alt="trekkie">
             <img src="IMG/daftpunktocat-thomas.gif" class="octocat" alt="daftpunktocat">
         </div>
-        <div class="catblock-2"></div>
-            <img src="IMG/NUX_Octodex.gif" class="octocat" alt="nux">
+        <div class="dancecat2">
+            <img src="IMG/NUX_Octodex.gif" class="octocat" alt="NUX_Octodex">
             <img src="IMG/Fintechtocat.png" class="octocat" alt="Fintechtocat">
-            <img src="IMG/NUX_Octodex.gif" class="octocat" alt="nux">
-        <div class="catblock-3"></div>
+            <img src="IMG/NUX_Octodex.gif" class="octocat" alt="NUX_Octodex">
+        </div>
+        <div class="dancecat3">
             <img src="IMG/daftpunktocat-thomas.gif" class="octocat" alt="daftpunktocat-thomas">
             <img src="IMG/trekkie.png" class="octocat" alt="trekkie">
             <img src="IMG/daftpunktocat-guy.gif" class="octocat" alt="daftpunktocat">
     </div>
+    <p>Images source: <a href="https://octodex.github.com/">GitHub Octodex</a></p>
+    </div>
+
 </body>
 </html>
