--- a/W1D3/Columns.html
+++ b/W1D3/Columns.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Columns.css">
     <title>Columns</title>
+    <style>
+        body{
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
