--- a/W1D4/UserCard.html
+++ b/W1D4/UserCard.html
@@ -9,9 +9,18 @@
 </head>
 <body>
     <div class="container">
-        <div class="top">TOP</div>
-        <div class="info">INFO</div>
-        <div class="profile">ICON</div>
+        <div class="top">
+            <img src="icons/user-circle.png" class="user-circle"> 
+            </div>
+            <div class="info">
+                <h1>Jane Doe</h1>
+                <div>
+                <h3><img src="icons/map-marker.png" class="icon">Seattle</h3>
+                <p>Developer | Engineer | Problem Solver</p>
+                <p>Master od shadows and the Internet!</p><br>
+                <h3><img src="icons/gear.png" class="gear"> <a href="url">edit profile</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
