--- a/W1D4/UserCard.html
+++ b/W1D4/UserCard.html
@@ -17,7 +17,7 @@
                 <div>
                 <h3><img src="icons/map-marker.png" class="icon">Seattle</h3>
                 <p>Developer | Engineer | Problem Solver</p>
-                <p>Master od shadows and the Internet!</p><br>
+                <p>Master of shadows and the Internet!</p><br>
                 <h3><img src="icons/gear.png" class="gear"> <a href="url">edit profile</a>
             </div>
         </div>
