--- a/Profile Page/ProfilePage.html
+++ b/Profile Page/ProfilePage.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile Page</title>
     <link rel="stylesheet" href="ProfilePage.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="nav">
+            <h1 class="nav-title">Profile</h1>
+            <ul class="nav-links">
+                <li><a href="url">Home</a></li>
+                <li><a href="url">My Profile</a></li>
+                <li><a href="url">Find Connections</a></li>
+                <li><button class="btn"></li>
+            </ul>
+        </div>
+        <div class=
+    </div>
 </body>
 </html>
