--- a/Profile Page/ProfilePage.html
+++ b/Profile Page/ProfilePage.html
@@ -18,7 +18,71 @@
                 <li><button class="btn"></li>
             </ul>
         </div>
-        <div class=
+        <div class="aboutme">
+            <div class="header1">
+                <img src="icons 2/user-circle.png" class="user-circle1">
+            </div>
+            <div class="information">
+                <h1>Jane Doe</h1>
+                <h2><img src="icons 2/map-marker.png" class="map-marker"> Seattle</h2>
+                <p>Developer | Engineer | Problem Solver</p><br>
+                <p>Master of shadows and the internet!</p><br>
+                <h3><img src="icons 2/gear.png" class="gear"> <a href="url">edit profile</a></h3>
+            </div>
+            </div>
+        </div>
+        <div class="education">
+            <div class="header2">
+                <h3 class="minihead1">Education</h3>
+            </div>
+            <div class="learning">
+                <h3>Coding Dojo - Full Stack Bootcamp</h3><br>
+                <p>Dec 2019 - Mar 2020</p><br>
+                <p>Triple black belt in Python, MERN, and C#...</p>
+            </div>
+        </div>
+        <div class="request">
+            <div class="header3">
+                <div class="circle"><h3 class="minihead2">Connection Requests</h3>
+                </div>
+                <div class="todd">
+                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Todd E</h3>
+                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
+                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
+                </div>
+                <div class="phil">
+                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Phil K</h3>
+                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
+                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
+                </div>
+            </div>
+        </div>
+        <div class="connection">
+            <div class="header4">
+                <div class="circle2"><h3 class="minihead3">Connection Requests</h3>
+                </div>
+                <div class="adrien">
+                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Adrien D</h3>
+                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
+                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
+                </div>
+                <div class="anne">
+                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Anne J</h3>
+                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
+                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
+                </div>
+                <div class="alayne">
+                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Alayne T</h3>
+                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
+                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
+                </div>
+                <div class="anne">
+                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Arry Y</h3>
+                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
+                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
