--- a/Profile Page/ProfilePage.html
+++ b/Profile Page/ProfilePage.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
     <link rel="stylesheet" href="ProfilePage.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -15,7 +18,7 @@
                 <li><a href="url">Home</a></li>
                 <li><a href="url">My Profile</a></li>
                 <li><a href="url">Find Connections</a></li>
-                <li><button class="btn"></li>
+                <li><button class="btn">Sign Out</button></li>
             </ul>
         </div>
         <div class="aboutme">
@@ -81,6 +84,9 @@
                     <button id="delete"><img src="icons/close-circle.png" class="no"></button>
                     <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
                 </div>
+            </div>
+            <div class="viewmore">
+                <h3><a href="url">View More</a></h3>
             </div>
         </div>
     </div>
