--- a/Profile Page/ProfilePage.html
+++ b/Profile Page/ProfilePage.html
@@ -27,9 +27,9 @@
             </div>
             <div class="information">
                 <h1>Jane Doe</h1>
-                <h2><img src="icons 2/map-marker.png" class="map-marker"> Seattle</h2>
-                <p>Developer | Engineer | Problem Solver</p><br>
-                <p>Master of shadows and the internet!</p><br>
+                <h2 class="seattle"><img src="icons 2/map-marker.png" class="map-marker"> Seattle</h2>
+                <p class="i">Developer | Engineer | Problem Solver</p>
+                <p class="i">Master of shadows and the Internet!</p>
                 <h3><img src="icons 2/gear.png" class="gear"> <a href="url">edit profile</a></h3>
             </div>
             </div>
