--- a/Profile Page/ProfilePage.html
+++ b/Profile Page/ProfilePage.html
@@ -4,91 +4,89 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Page</title>
+    <title>Document</title>
     <link rel="stylesheet" href="ProfilePage.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div class="nav">
-            <h1 class="nav-title">Profile</h1>
+    <div class="nav">
+        <h1 class="nav-title">Profile</h1>
             <ul class="nav-links">
-                <li><a href="url">Home</a></li>
-                <li><a href="url">My Profile</a></li>
-                <li><a href="url">Find Connections</a></li>
-                <li><button class="btn">Sign Out</button></li>
+                <li>
+                    <a href="url">Home</a>
+                </li>
+                <li>
+                    <a href="url">My Profile</a>
+                </li>
+                <li>
+                    <a href="url">Find Connections</a>
+                </li>
+                <li>
+                    <button class="btn">Sign Out</button>
+                </li>
             </ul>
         </div>
-        <div class="aboutme">
-            <div class="header1">
-                <img src="icons 2/user-circle.png" class="user-circle1">
-            </div>
-            <div class="information">
-                <h1>Jane Doe</h1>
-                <h2 class="seattle"><img src="icons 2/map-marker.png" class="map-marker"> Seattle</h2>
-                <p class="i">Developer | Engineer | Problem Solver</p>
-                <p class="i">Master of shadows and the Internet!</p>
-                <h3><img src="icons 2/gear.png" class="gear"> <a href="url">edit profile</a></h3>
-            </div>
-            </div>
+    <div class="container">       
+            <div class="big-col1">
+                    <div class="col-1">
+                        <div class="header-1">
+                        <img src="images/user-circle.png" class="user-circle1">
+                        </div>
+                    <div class="info-1">
+                        <h1>Jane Doe</h1>
+                        <h2 class="seattle"><img src="images/map-marker.png" class="map-marker"> Seattle</h2>
+                        <p class="i">Developer | Engineer | Problem Solver</p>
+                        <p class="i">Master of shadows and the Internet!</p>
+                        <h3><img src="images/gear.png" class="gear"> <a href="url">edit profile</a></h3>
+                    </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="header-3">
+                            <h3 class="title-2">Education</h3>
+                        </div>
+                        <div class="info-2">
+                        <h4>Coding Dojo - Full Stack Bootcamp</h4><br>
+                        <p>Dec 2019 - Mar 2020</p><br>
+                        <p>Triple black belt in Python, MERN, and C#...</p>
+                        </div>
+                    </div>
+                    </div>
+            <div class="big-col2">            <div class="col-2">
+                <div class="header-2">
+                    <div class="circle-1"><h3 class="title-1">Connection Requests</h3>
+                </div>
+                    <div class="name">
+                        <h3><img src="images/user-circle.png" class="user-circle2"> Todd E</h3>
+                        <button id="delete"><img src="images/close-circle.png" class="no"></button>
+                        <button id="accept"><img src="images/accept-circle.png" class="yes"></button>
+                    </div>
+                        <div class="name">
+                    <h3><img src="images/user-circle.png" class="user-circle2"> Phil K</h3>
+                        <button id="delete"><img src="images/close-circle.png" class="no"></button>
+                        <button id="accept"><img src="images/accept-circle.png" class="yes"></button>
+                    </div>
+                    </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="header4">
+                            <div class="circle-2"><h3 class="title-3">Your Connections</h3>
+                        </div>
+                                <div class="name">
+                                <h3><img src="images/user-circle.png" class="user-circle2"> Adrien D</h3>
+                                </div>
+                                <div class="name">
+                                <h3><img src="images/user-circle.png" class="user-circle2"> Anne J</h3>
+                                </div>
+                                <div class="name">
+                                <h3><img src="images/user-circle.png" class="user-circle2"> Alayne T</h3>
+                                </div>
+                                <div class="name">
+                                <h3><img src="images/user-circle.png" class="user-circle2"> Arry Y</h3>
+                            </div>
+                        </div>
+                    <div class="viewmore">
+                        <h3><a href="url">View More</a></h3>
+                    </div></div>
         </div>
-        <div class="education">
-            <div class="header2">
-                <h3 class="minihead1">Education</h3>
-            </div>
-            <div class="learning">
-                <h3>Coding Dojo - Full Stack Bootcamp</h3><br>
-                <p>Dec 2019 - Mar 2020</p><br>
-                <p>Triple black belt in Python, MERN, and C#...</p>
-            </div>
-        </div>
-        <div class="request">
-            <div class="header3">
-                <div class="circle"><h3 class="minihead2">Connection Requests</h3>
-                </div>
-                <div class="todd">
-                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Todd E</h3>
-                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
-                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
-                </div>
-                <div class="phil">
-                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Phil K</h3>
-                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
-                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
-                </div>
-            </div>
-        </div>
-        <div class="connection">
-            <div class="header4">
-                <div class="circle2"><h3 class="minihead3">Connection Requests</h3>
-                </div>
-                <div class="adrien">
-                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Adrien D</h3>
-                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
-                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
-                </div>
-                <div class="anne">
-                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Anne J</h3>
-                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
-                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
-                </div>
-                <div class="alayne">
-                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Alayne T</h3>
-                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
-                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
-                </div>
-                <div class="anne">
-                    <h3><img src="icons 2/user-circle.png" class="user-circle2"> Arry Y</h3>
-                    <button id="delete"><img src="icons/close-circle.png" class="no"></button>
-                    <button id="accept"><img src="icons/accept-circle.png" class="yes"></button>
-                </div>
-            </div>
-            <div class="viewmore">
-                <h3><a href="url">View More</a></h3>
-            </div>
-        </div>
-    </div>
+    </div>    
 </body>
 </html>
