--- a/Profile Page/ProfilePage.html
+++ b/Profile Page/ProfilePage.html
@@ -32,11 +32,14 @@
                         <img src="images/user-circle.png" class="user-circle1">
                         </div>
                     <div class="info-1">
-                        <h1>Jane Doe</h1>
+                        <h1 class="jane">Jane Doe</h1>
+                        <br>
                         <h2 class="seattle"><img src="images/map-marker.png" class="map-marker"> Seattle</h2>
+                        <br>
                         <p class="i">Developer | Engineer | Problem Solver</p>
                         <p class="i">Master of shadows and the Internet!</p>
-                        <h3><img src="images/gear.png" class="gear"> <a href="url">edit profile</a></h3>
+                    </div>
+                    <div class="link-gear"><img src="images/gear.png" class="gear"> <a href="url">edit profile</a>
                     </div>
                     </div>
                     <div class="col-3">
