--- a/Profile Page/ProfilePage.html
+++ b/Profile Page/ProfilePage.html
@@ -28,7 +28,7 @@
     <div class="container">       
             <div class="big-col1">
                     <div class="col-1">
-                        <div class="header-1">
+                        <div class="header">
                         <img src="images/user-circle.png" class="user-circle1">
                         </div>
                     <div class="info-1">
@@ -36,59 +36,84 @@
                         <br>
                         <h2 class="seattle"><img src="images/map-marker.png" class="map-marker"> Seattle</h2>
                         <br>
-                        <p class="i">Developer | Engineer | Problem Solver</p>
-                        <p class="i">Master of shadows and the Internet!</p>
+                        <p class="i-1">Developer | Engineer | Problem Solver</p>
+                        <p class="i-1">Master of shadows and the Internet!</p>
                     </div>
                     <div class="link-gear"><img src="images/gear.png" class="gear"> <a href="url">edit profile</a>
                     </div>
                     </div>
                     <div class="col-3">
-                        <div class="header-3">
-                            <h3 class="title-2">Education</h3>
+                        <div class="header-1">Education
                         </div>
                         <div class="info-2">
-                        <h4>Coding Dojo - Full Stack Bootcamp</h4><br>
-                        <p>Dec 2019 - Mar 2020</p><br>
-                        <p>Triple black belt in Python, MERN, and C#...</p>
+                        <h2>Coding Dojo - Full Stack Bootcamp</h2><br>
+                        <p class="i-3">Dec 2019 - Mar 2020</p><br>
+                        <p class="i-2">Triple black belt in Python, MERN, and C#...</p>
                         </div>
                     </div>
                     </div>
-            <div class="big-col2">            <div class="col-2">
-                <div class="header-2">
-                    <div class="circle-1"><h3 class="title-1">Connection Requests</h3>
-                </div>
-                    <div class="name">
-                        <h3><img src="images/user-circle.png" class="user-circle2"> Todd E</h3>
-                        <button id="delete"><img src="images/close-circle.png" class="no"></button>
-                        <button id="accept"><img src="images/accept-circle.png" class="yes"></button>
+            <div class="big-col2">            
+                <div class="col-2">
+                <div class="header-2">Connection Requests
                     </div>
-                        <div class="name">
-                    <h3><img src="images/user-circle.png" class="user-circle2"> Phil K</h3>
-                        <button id="delete"><img src="images/close-circle.png" class="no"></button>
-                        <button id="accept"><img src="images/accept-circle.png" class="yes"></button>
-                    </div>
-                    </div>
+                    <div class="c-req1">
+                        <span class="c-body1">
+                            <img src="images/user-circle.png" class="user-circle2">
+                            <span>Todd E.</span>
+                            </span>
+                            <span class="c-body2">
+                                <img src="images/close-circle.png" alt="accept" class="circle-3">
+                                <img src="images/accept-circle.png" alt="decline" class="circle-3">
+                            </span>
+                        </span>
+                        </div>
+                        <div class="c-req1">
+                            <span class="c-body1">
+                                <img src="images/user-circle.png" class="user-circle2">
+                                <span>Todd E.</span>
+                                </span>
+                                <span class="c-body2">
+                                    <img src="images/close-circle.png" alt="accept" class="circle-3">
+                                    <img src="images/accept-circle.png" alt="decline" class="circle-3">
+                                </span>
+                            </span>
+                            </div>
                     </div>
                     <div class="col-4">
-                        <div class="header4">
-                            <div class="circle-2"><h3 class="title-3">Your Connections</h3>
+                        <div class="header-3">Your Connections
                         </div>
-                                <div class="name">
-                                <h3><img src="images/user-circle.png" class="user-circle2"> Adrien D</h3>
-                                </div>
-                                <div class="name">
-                                <h3><img src="images/user-circle.png" class="user-circle2"> Anne J</h3>
-                                </div>
-                                <div class="name">
-                                <h3><img src="images/user-circle.png" class="user-circle2"> Alayne T</h3>
-                                </div>
-                                <div class="name">
-                                <h3><img src="images/user-circle.png" class="user-circle2"> Arry Y</h3>
+                        <div class="c-req1">
+                            <span class="c-body1">
+                                <img src="images/user-circle.png" class="user-circle2">
+                                <span>Adrien D.</span>
+                                </span>
+                            </span>
                             </div>
-                        </div>
-                    <div class="viewmore">
+                            <div class="c-req1">
+                                <span class="c-body1">
+                                    <img src="images/user-circle.png" class="user-circle2">
+                                    <span>Anne J.</span>
+                                    </span>
+                                </span>
+                                </div>
+                                <div class="c-req1">
+                                    <span class="c-body1">
+                                        <img src="images/user-circle.png" class="user-circle2">
+                                        <span>Alayne T.</span>
+                                        </span>
+                                    </span>
+                                    </div>
+                                    <div class="c-req1">
+                                        <span class="c-body1">
+                                            <img src="images/user-circle.png" class="user-circle2">
+                                            <span>Arry Y.</span>
+                                            </span>
+                                        </span>
+                                    </div>
+                        <div class="viewmore">
                         <h3><a href="url">View More</a></h3>
-                    </div></div>
+                    </div>
+                </div>
         </div>
     </div>    
 </body>
