--- a/Profile Page/ProfilePage.html
+++ b/Profile Page/ProfilePage.html
@@ -54,9 +54,11 @@
                     </div>
             <div class="big-col2">            
                 <div class="col-2">
-                <div class="header-2">Connection Requests
-                    </div>
-                    <div class="c-req1">
+                <div class="header-2">
+                    <span class="numbercircle">2</span>
+                    Connection Requests
+                </div>
+                <div class="c-req1">
                         <span class="c-body1">
                             <img src="images/user-circle.png" class="user-circle2">
                             <span>Todd E.</span>
@@ -80,7 +82,9 @@
                             </div>
                     </div>
                     <div class="col-4">
-                        <div class="header-3">Your Connections
+                        <div class="header-3">
+                            <span class="numbercircle">500+</span>
+                            Your Connections
                         </div>
                         <div class="c-req1">
                             <span class="c-body1">
