--- a/Button Clicker/ButtonClicker.html
+++ b/Button Clicker/ButtonClicker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button CLicker</title>
+    <title>Button Clicker</title>
     <link rel="stylesheet" href="ButtonClicker.css">
 </head>
 <body>
@@ -16,16 +16,33 @@
     <div class="container">
         <div class="column-1">
             <div class="block-1">
-                <div class="ninja-1">NinjaInfo1</div>
-                <div class="ninja-2">NinjaInfo2</div>
+                <div class="ninja-1">
+                    <h1>ninja</h1>
+                    <p><h2>noun</h2></p>
+                        <p><h3>Plural: ninjas</h3></p>
+                        <button class="button-2">13 likes</button>
+                </div>
+                <div class="ninja-2">
+                    <p>A practitioner skilled in the</p>
+                    <a href="#">Japanese</a> art of <a href="#">ninjutsu</a>
+                </div>
             </div>
             <div class="block-2">
-                <div class="ninja-1">NinjaInfo1</div>
-                <div class="ninja-2">NinjaInfo2</div>
+                <div class="ninja-1"><h1>ninja</h1>
+                    <p><h2>noun</h2></p>
+                        <p><h3>Plural: ninjas</h3></p>
+                        <button class="button-2">37 likes</button>
+                    </div>
+                <div class="ninja-2">A <a href="#">Programmer</a> who breaks</p>
+                <p>down problems with <a href="#">zen</a>-like focus</p>
+                </div>
             </div>
         </div>
         <div class="column-2">
-            <div class="ninja-3">NinjaInfo3</div>
+            <div class="ninja-3">
+                <p>Dojonary is defined by YOU</p>
+                <button class="button-3">Add Definition</button>
+            </div>
         </div>
     </div>
     <script src="ButtonClicker.js"></script>
