--- a/Button Clicker/ButtonClicker.html
+++ b/Button Clicker/ButtonClicker.html
@@ -11,7 +11,7 @@
     <div class="navigation">
         <div class="nav-title">Dojonary</div>
         <div class="search-bar">Search</div>
-        <button class="button-1">Login</button>
+        <button onclick="turnOff(this)" class="button-1">Login</button>
     </div>
     <div class="container">
         <div class="column-1">
@@ -20,7 +20,7 @@
                     <h1>ninja</h1>
                     <p><h2>noun</h2></p>
                         <p><h3>Plural: ninjas</h3></p>
-                        <button class="button-2">13 likes</button>
+                        <button class="button-2" onclick="alert('Ninja was liked')">13 likes</button>
                 </div>
                 <div class="ninja-2">
                     <p>A practitioner skilled in the</p>
@@ -41,7 +41,7 @@
         <div class="column-2">
             <div class="ninja-3">
                 <p>Dojonary is defined by YOU</p>
-                <button class="button-3">Add Definition</button>
+                <button onclick="turnOff(this)" class="button-3">Add Definition</button>
             </div>
         </div>
     </div>
