--- a/Video Preview/VideoPreview.html
+++ b/Video Preview/VideoPreview.html
@@ -13,38 +13,60 @@
         <div class="search-bar">Search</div>
         <button class="button-1">Login</button>
     </div>
-    <div class="containter">
-        <div class="column-1">
-            <video id="myVideo" onmouseover="play(this)" onmouseout="pause(this)" controls>
-                <source src="pexels-cottonbro-6543963.mp4" type="video/mp4">
-            </video>
-        </div>
-        <div class="column-2">
-            <div class="vid-info">
-                <p class="vid-title">Example Video Title</p>
-                <p class="views">1.3K views | Auguest 24, 2021</p>
-                <img src="brandon.png" class="userpic">
-                <a href="#" class="userlink">Brandon Vilay <3</a>
+    <div class="container">
+        <div class="bigcolumn-1">
+            <div class="column-1">
+                <video id="myVideo1" onmouseover="play(this)" onmouseout="pause(this)" controls>
+                    <source src="pexels-cottonbro-6543963.mp4" type="video/mp4">
+                </video>
             </div>
-            <div class="sub-box">
-                <button class="button-2">Subscribe</button>
-            </div>
-        </div>
-        <div class="column-3">
-            <div class="upnext">Up Next
+            <div class="column-2">
+                <div class="vid-info">
+                    <p class="vid-title"><h2>Example Video Title</h2></p>
+                    <p class="views">1.3K views | Auguest 24, 2021</p>
+                    <img src="brandon.png" class="userpic">
+                    <a href="#" class="userlink">Brandon Vilay<3</a>
+                </div>
+                <div class="sub-box">
+                    <button class="button-2">Subscribe</button>
+                </div>
             </div>
         </div>
-        <div class="column-4">
-            <div class="minivid-1"></div>
-            <div class="minivid-2"></div>
-            <div class="minivid-3"></div>
-            <div class="minivid-4"></div>
-        </div>
-        <div class="column-5">
-            <div class="miniinfo-1"></div>
-            <div class="miniinfo-2"></div>
-            <div class="miniinfo-3"></div>
-            <div class="miniinfo-4"></div>
+        <div class="bigcolumn-2">
+            <div class="column-3">
+                <div class="upnext">Up Next
+                </div>
+                </div>
+                <div class="column-4">
+                    <div class="minivid">
+                        <video id="myVideo2" onmouseover="play(this)" onmouseout="pause(this)" controls>
+                            <source src="pexels-artem-podrez-6943719.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="minivid">
+                        <video id="myVideo3" onmouseover="play(this)" onmouseout="pause(this)" controls>
+                            <source src="pexels-michelle-leman-6763535.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="minivid">
+                        <video id="myVideo4" onmouseover="play(this)" onmouseout="pause(this)" controls>
+                            <source src="pexels-artem-podrez-7235037.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="minivid">
+                        <video id="myVideo5" onmouseover="play(this)" onmouseout="pause(this)" controls>
+                            <source src="pexels-michelle-leman-6768689.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    </div>
+                </div>
+                <div class="column-5">
+                    <div class="miniinfo">Color Art</div>
+                    <div class="miniinfo">Pink Roses</div>
+                    <div class="miniinfo">Grape Fruit</div>
+                    <div class="miniinfo">Pink Make-up</div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="VideoPreview.js"></script>
