--- a/Video Preview/VideoPreview.html
+++ b/Video Preview/VideoPreview.html
@@ -22,7 +22,7 @@
             </div>
             <div class="column-2">
                 <div class="vid-info">
-                    <p class="vid-title"><h2>Example Video Title</h2></p>
+                    <p class="vid-title"><h2>My Video Gallery</h2></p>
                     <p class="views">1.3K views | Auguest 24, 2021</p>
                     <img src="brandon.png" class="userpic">
                     <a href="#" class="userlink">Brandon Vilay<3</a>
