--- a/Liking Likes/LikingLikes.html
+++ b/Liking Likes/LikingLikes.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="LikingLikes.css">
 </head>
 <body>
-    <div class="containter">
+    <div class="container">
         <div class="row-1">
             <span class="someuser">Some User</span>
-            <div class="counters">
+            <div class="counter">
                 <div id="count">
-                    1
+                    1 like(s)
                 </div>
                 <button onclick="updateCounter()" class="counter">
-                    !
+                    Like
                 </button>
             </div>
         </div>
         <div class="row-2">
-            <h3>This is sine filler text, it can say anything we like</h3>
+            <h4>This is some filler text, it can say anything we like</h4>
         </div>
     </div>
     <script src="LikingLikes.js"></script>
